2015-02-17  Natalia Portillo  <claunia@claunia.com>

	* MyClass.cs:
	* NSObject.cs:
	* plist-cil.csproj:
	  Pre-implement NSObject.

2015-02-16  Natalia Portillo  <claunia@claunia.com>

	* ChangeLog:
	* plist-cil.csproj:
	* Properties/AssemblyInfo.cs:
	  Initial commit

2015-02-16  Natalia Portillo  <claunia@claunia.com>

	* MyClass.cs:
	* plist-cil.csproj:
	* Properties/AssemblyInfo.cs:
	  Initial commit
